[package]
name = "procfsps"
version = "0.1.1"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Ps program with procfs crate."
repository = "https://github.com/luckboy/procfsps"
keywords = ["cli", "utility", "linux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopt = "1.1.3"
libc = "0.2.113"
procfs = { version = "0.14.1", default-features = false }
users = "0.11.0"
